--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "microcms-js-sdk": "^2.5.0",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.63.4"
   }
 }
